--- a/homepage.css
+++ b/homepage.css
@@ -1,7 +1,7 @@
 
 body {
   background-color: #000;
-  color: #fff;
+  color: #ddd;
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   font-weight: normal;
@@ -10,34 +10,38 @@ body {
 }
 
 p {
-  color: #aaa;
+  color: #eee;
 }
 
 a {
-    color: #888;
+    color: #ddd;
 }
 
 a:link {
-    color: #888;
+    color: #ddd;
 } 
 
 a:visited {
-    color: #888;
+    color: #ddd;
 }
 
 a:hover {
-    color: #aaa;
+    color: #fff;
 }
 
 #panel {
     position: absolute;
     top: 0;
     left: 0;
-    margin: 0 0 0 0;
+    margin: 1px;
+    padding: 6px;
     border-style: solid;
     border-width: 1px;
     border-color: #666;
     background-color: #222;
+}
+
+#panelInside {
 }
 
 #container {
